--- a/style.css
+++ b/style.css
@@ -539,3 +539,20 @@ footer{
     font-size: 145%;
     font-family: "Ubuntu", sans-serif;
 }
+
+
+@media(max-width:800px)
+{
+    .listItems {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    list-style: none;
+    flex-direction: column;
+    position: fixed;
+    width: 100vw;
+    height: 41vh;
+    background-color: #ece3cc;
+    top: 0;
+}
+}
