--- a/style.css
+++ b/style.css
@@ -582,24 +582,25 @@ footer{
 }
 
 .hero {
-    width: 50%;
-    margin: 34% 9%;
+    width: 59%;
+    margin: 47% 6%;
     font-family: "Ubuntu", sans-serif;
 }
 
-.heroPromise {
-    margin-top: 5%;
-    font-size: 67%;
+.heroPromise
+{
+        margin-top: 5%;
+        font-size: 70%;
 }
 
 .COA {
-    font-size: 106%;
+    font-size: 120%;
     color: #970404;
 }
 
 .call-out-headlines {
     margin-top: 5%;
-    font-size: 85%;
+    font-size: 96%;
     color: #bf1616;
 }
 
