--- a/style.css
+++ b/style.css
@@ -619,11 +619,23 @@ footer{
     margin: 14% 16%;
 }
 
-.container {
+.container{
+    height: 79%;
+    width: 90%;
+    margin: auto;
+    margin-top: 7%;
+    border-radius: 20px;
+    font-family: "Ubuntu", sans-serif;
+    background-color: #fbf6f3;
+    display: flex;
     flex-direction: column;
     font-size: 75%;
 }
 
+.container{
+     flex-direction: column;
+    font-size: 75%;
+}
    .belief-break {
         margin-top: 57%;
         font-size: 161%;
@@ -631,11 +643,11 @@ footer{
 
 .benefits-bullet {
     margin: 8% 5%;
-    width: 80%;
+    width: 85%;
 }
 
 .stat-points {
     width: 100%;
-}
 
+}
 }
