--- a/style.css
+++ b/style.css
@@ -707,4 +707,21 @@ footer{
     margin-top: 5%;
     padding: 2%;
     }
+
+.container5{
+    font-size: 64%;
+}
+
+#CTA-btn {
+    padding: 2.5%;
+    font-size: 155%;
+    margin-bottom: 1%;
+    margin-top: 32%;
+}
+
+.offerHeading {
+    margin-top: 48%;
+    font-size: 221%;
+    color: #970404;
+}
 }
